--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@clerk/backend": "^1.25.8",
     "@clerk/clerk-expo": "^2.9.6",
+    "@clerk/expo-passkeys": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -25,6 +26,7 @@
     "convex": "^1.22.0",
     "expo": "~52.0.42",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-checkbox": "~4.0.1",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.17",
@@ -33,6 +35,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "~17.0.6",
     "expo-router": "~4.0.19",
     "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.22",
