--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^7.0.14",
     "convex": "^1.22.0",
     "date-fns": "^4.1.0",
+    "elevenlabs": "^1.56.1",
     "expo": "~52.0.42",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
@@ -44,7 +45,9 @@
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.9",
+    "expo-video": "~2.0.6",
     "expo-web-browser": "~14.0.2",
+    "fs": "^0.0.1-security",
     "jotai": "^2.12.2",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
