--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.0.14",
+    "@sentry/react-native": "^6.11.0",
     "convex": "^1.22.0",
     "date-fns": "^4.1.0",
     "elevenlabs": "^1.56.1",
