Update Readme with examples.

--- a/app.json
+++ b/app.json
@@ -64,7 +64,15 @@
         }
       ],
       "expo-video",
-      "expo-audio"
+      "expo-audio",
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "captions",
+          "organization": "galaxies"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
